--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk:
 - oraclejdk8
-script: "mvn deploy --setings settings.xml"
+script: "mvn deploy --settings settings.xml"
 
 env:
   global:
