--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>de.axelspringer.ideas.tools.dash-core</module>
-        <module>de.axelspringer.ideas.tools.dash-example</module>
+        <module>dash-core</module>
+        <module>dash-example</module>
     </modules>
 
     <packaging>pom</packaging>
