--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -6,12 +6,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>de.axelspringer.ideas.tools.dash-parent</artifactId>
-        <groupId>de.axelspringer.ideas.tools.de.axelspringer.ideas.tools.dash</groupId>
+        <groupId>de.axelspringer.ideas.tools.dash</groupId>
+        <artifactId>dash-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>de.axelspringer.ideas.tools.dash-core</artifactId>
+    <artifactId>dash-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
