--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.axelspringer.ideas.tools.de.axelspringer.ideas.tools.dash</groupId>
-    <artifactId>de.axelspringer.ideas.tools.dash-parent</artifactId>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.2.RELEASE</version>
+    </parent>
+
+    <groupId>de.axelspringer.ideas.tools.dash</groupId>
+    <artifactId>dash-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
@@ -15,12 +21,6 @@
     </modules>
 
     <packaging>pom</packaging>
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.2.RELEASE</version>
-    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
