--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -5,14 +5,16 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>de.axelspringer.ideas.tools.dash</groupId>
-        <artifactId>dash-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
+    <groupId>de.axelspringer.ideas.tools.dash</groupId>
     <artifactId>dash-core</artifactId>
+
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.2.RELEASE</version>
+    </parent>
 
     <properties>
         <github.global.server>github</github.global.server>
@@ -29,6 +31,15 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
             <!-- sources -->
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
