--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -168,6 +168,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
