--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -14,7 +14,6 @@
     <name>${project.artifactId} : ${project.version}</name>
 
 
-
     <properties>
         <github.global.server>github</github.global.server>
         <deploy.to.git>true</deploy.to.git>
@@ -45,6 +44,25 @@
     <profiles>
         <profile>
             <id>deploy-to-local</id>
+        </profile>
+
+        <profile>
+            <id>deploy-to-default</id>
+
+            <distributionManagement>
+                <repository>
+                    <id>pcp-release</id>
+                </repository>
+            </distributionManagement>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <version>2.8.1</version>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
