--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>de.axelspringer.ideas.tools.dash</groupId>
         <artifactId>dash-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>4</version>
     </parent>
 
     <artifactId>dash-core</artifactId>
@@ -49,17 +49,14 @@
         <profile>
             <id>deploy-to-default</id>
 
-            <distributionManagement>
-                <repository>
-                    <id>pcp-release</id>
-                </repository>
-            </distributionManagement>
-
             <build>
                 <plugins>
                     <plugin>
                         <artifactId>maven-deploy-plugin</artifactId>
                         <version>2.8.1</version>
+                        <configuration>
+                            <skip>false</skip>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
