--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>de.axelspringer.ideas.tools.dash</groupId>
         <artifactId>dash-parent</artifactId>
-        <version>6</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>dash-core</artifactId>
