--- a/dash-example/pom.xml
+++ b/dash-example/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>de.axelspringer.ideas.tools.dash</groupId>
         <artifactId>dash-parent</artifactId>
-        <version>6</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>dash-example</artifactId>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>de.axelspringer.ideas.tools.dash</groupId>
             <artifactId>dash-core</artifactId>
-            <version>6</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
