--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>de.axelspringer.ideas.tools.dash</groupId>
     <artifactId>dash-parent</artifactId>
-    <version>6</version>
+    <version>1.0-SNAPSHOT</version>
     <name>${project.artifactId} : ${project.version}</name>
 
     <modules>
