--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -4,17 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>de.axelspringer.ideas.tools.dash</groupId>
-    <artifactId>dash-core</artifactId>
-
-    <version>1.0-SNAPSHOT</version>
-
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.2.RELEASE</version>
+        <groupId>de.axelspringer.ideas.tools.dash</groupId>
+        <artifactId>dash-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <artifactId>dash-core</artifactId>
+    <name>${project.artifactId} : ${project.version}</name>
+
 
     <properties>
         <github.global.server>github</github.global.server>
@@ -46,6 +44,22 @@
     <profiles>
         <profile>
             <id>deploy-to-local</id>
+        </profile>
+
+        <profile>
+            <id>deploy-to-default</id>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <version>2.8.1</version>
+                        <configuration>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
