--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,16 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.2.RELEASE</version>
+    </parent>
+
     <groupId>de.axelspringer.ideas.tools.dash</groupId>
     <artifactId>dash-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>${project.artifactId} : ${project.version}</name>
 
     <modules>
         <module>dash-core</module>
@@ -34,4 +41,23 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <profiles>
+        <profile>
+            <id>deploy-to-default</id>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <version>2.8.1</version>
+                        <configuration>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
