--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -5,14 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>de.axelspringer.ideas.tools.dash</groupId>
-        <artifactId>dash-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.2.RELEASE</version>
     </parent>
 
+    <groupId>de.axelspringer.ideas.tools.dash</groupId>
     <artifactId>dash-core</artifactId>
     <name>${project.artifactId} : ${project.version}</name>
-
 
     <properties>
         <github.global.server>github</github.global.server>
@@ -101,7 +101,9 @@
                         <artifactId>maven-deploy-plugin</artifactId>
                         <version>2.8.1</version>
                         <configuration>
-                            <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                            <altDeploymentRepository>
+                                internal.repo::default::file://${project.build.directory}/mvn-repo
+                            </altDeploymentRepository>
                             <skip>false</skip>
                         </configuration>
                         <executions>
