solve dependency issues

--- a/dash-example/pom.xml
+++ b/dash-example/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>dash-example</artifactId>
-    <name>${project.artifactId} : ${project.version}</name>
+    <version>1.0-SNAPSHOT</version>
 
     <build>
         <plugins>
