--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>de.axelspringer.ideas.tools.dash</groupId>
     <artifactId>dash-core</artifactId>
-    <name>${project.artifactId} : ${project.version}</name>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <github.global.server>github</github.global.server>
