DIP-301: Include Cloudwatch Monitoring
- added the AWS-Java-SDK as dependency
- added a CloudwatchCheck and Executor

--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -199,6 +199,12 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.109</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
