add aws region (needed), only use cloudwatch-sdk (instead of full sdk), remove dependency-hickup

--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -201,8 +202,8 @@
 
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.109</version>
+            <artifactId>aws-java-sdk-cloudwatch</artifactId>
+            <version>1.11.113</version>
         </dependency>
 
         <!-- Test -->
