--- a/dash-example/pom.xml
+++ b/dash-example/pom.xml
@@ -4,14 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>de.axelspringer.ideas.tools.dash</groupId>
-        <artifactId>dash-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 
     <artifactId>dash-example</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.2.RELEASE</version>
+    </parent>
 
     <build>
         <plugins>
