--- a/dash-core/pom.xml
+++ b/dash-core/pom.xml
@@ -4,10 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.2.RELEASE</version>
+        <version>1.5.2.RELEASE</version>
     </parent>
 
     <groupId>de.axelspringer.ideas.tools.dash</groupId>
@@ -183,7 +184,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.2.1</version>
+            <version>3.5</version>
         </dependency>
 
         <!-- HTML Parser used in Checks-->
@@ -201,8 +202,8 @@
 
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.109</version>
+            <artifactId>aws-java-sdk-cloudwatch</artifactId>
+            <version>1.11.113</version>
         </dependency>
 
         <!-- Test -->
